...
    
    init(viewController: ProfileViewController) {
        self.viewController = viewController
    }
    
    func showAlertWithYesNoAction() {
        let alertController = UIAlertController(title: "Пока, пока!", message: "Вы уверены, что хотите выйти?", preferredStyle: .alert)
        
        
        let yesAction = UIAlertAction(title: "Да", style: .default) { (_) in
            self.clean()
            self.tokenStorage.removeTokenFromKeychain()
            alertController.dismiss(animated: true, completion: nil)
            self.window?.rootViewController = self.splashViewController
            self.window?.makeKeyAndVisible()
            print("User tapped 'Yes'")
...
